[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "neuraldb"
version = "1.0.0"
description = "AI-Native Database Engine — confidence-aware records, temporal decay, memory lanes, vector search, knowledge graph, and AIQL"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "NeuralDB Contributors", email = "contributors@neuraldb-project.dev" }]
keywords = [
  "database", "ai", "vector", "embeddings", "knowledge-graph",
  "memory", "llm", "rag", "episodic", "semantic",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Database :: Database Engines/Servers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = ["numpy>=1.24.0"]

[project.optional-dependencies]
server = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.0.0",
  "python-multipart>=0.0.9",
]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.4.0",
  "mypy>=1.8.0",
  "bandit[toml]>=1.7.0",
  "safety>=3.0.0",
]

[project.urls]
Homepage     = "https://github.com/<owner>/neuraldb"
Repository   = "https://github.com/<owner>/neuraldb"
Issues       = "https://github.com/<owner>/neuraldb/issues"
Changelog    = "https://github.com/<owner>/neuraldb/blob/main/CHANGELOG.md"
"API Docs"   = "https://<your-domain>/docs"

[project.scripts]
neuraldb-server = "server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["neuraldb*"]

# ── Ruff (linter + formatter) ────────────────────────────────────────────────
[tool.ruff]
target-version = "py39"
line-length = 100
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "C4"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["neuraldb"]

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["neuraldb"]
omit = ["tests/*", "benchmarks/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

# ── Bandit (SAST) ─────────────────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", "benchmarks"]
skips = ["B101"]  # allow assert in tests
